--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
+    "nodemon": "^1.18.11",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
