--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "victory": "^32.2.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
   }
