--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "victory": "^32.2.3",
     "webpack": "^4.30.0",
