--- a/package.json
+++ b/package.json
@@ -15,30 +15,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "http-proxy-middleware": "^0.19.1",
-    "nodemon": "^1.18.11",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
+    "react-redux": "^7.1.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "victory": "^32.2.3",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
+    "victory": "^32.3.0",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
