added node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ecgdata",
   "version": "1.0.0",
+  "engines": {
+    "node": "11.2.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
